2000-04-28  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit-delete.c
	(delete_different_parent): `html_object_dup()' before adding to
	the buffer.

	* htmlengine-edit-fontstyle.c: Redone, with undo/redo support.

2000-04-28  Radek Doulik  <rodo@helixcode.com>

	* htmlimage.c (html_image_set_spacing): set hspace, vspace,
	updated to schedule update
	(html_image_set_filename): set filename, if changed, uregister
	current image_ptr and register new one
	(html_image_set_valign): set valign, if needed shedules update
	(html_image_set_border): set border, if needed shedules update
	(html_image_set_size): set specified_width, specified_height,
	percent, if needed shedules update

2000-04-27  Radek Doulik  <rodo@helixcode.com>

	* testgtkhtml.c (main): test gtk_html_set_default_background_color
	- set light blue background

	* htmlengine.c (html_engine_parse): free allocated bgColor

	* gtkhtml.c (gtk_html_set_default_background_color): new function
	for Dan :)
	(realize): removed setting of bgcolor to gtk bg[NORMAL] color,
	when needed use gtk_html_set_default_background_color instead

2000-04-26  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit-paste.c (skip): removed
	(obj_len): new function, returns 1 for non-text, text_len else
	(append_object): don't use skip, keep cursor consistent
	(prepend_object): likewise
	(do_paste): keep cursor consistent, don't use skip, also merge
	objects copied from ClueFlows
	(do_undo): use backward arg of html_engine_delete instead of
	calling html_engine_move_cursor
	hack around html_engine_delete bug - loop buffer_count times and
	remove one char each time - hopefully I correct it

2000-04-25  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit-insert.c (html_engine_insert_link): new function
	for link insertion

2000-04-24  Dan Winship  <danw@helixcode.com>

	* htmlengine.c (html_engine_destroy): remove the updateTimer, if
	it's active.
	(html_engine_timer_event): if calling html_engine_update_event,