@@ -1,3 +1,9 @@
+2000-04-29  Radek Doulik  <rodo@helixcode.com>
+
+	* htmllinktextmaster.c (html_link_text_master_set_url): new setting function 
+
+	* htmltext.c (html_text_set_text): new setting function
+
 2000-04-28  Ettore Perazzoli  <ettore@helixcode.com>
 
 	* htmlengine-edit-delete.c
